--- a/assets/v2/material/material-cards.scss
+++ b/assets/v2/material/material-cards.scss
@@ -10,7 +10,7 @@
 
 
 
-:root {
+#{$applies-to-everything-selector} {
     --card-margin-block-start: 1ex;
     --card-margin-block-end: 1ex;
     --card-margin-inline-start: 1ex;
