--- a/assets/v2/material/material-structure-vars.scss
+++ b/assets/v2/material/material-structure-vars.scss
@@ -217,77 +217,77 @@ $size-class-tablet-desktop-breakpoint: $tablet-landscape-max-width !default;
 
 
 
-@include css-vars((
-    --layout-4-column-min-width:  $layout-4-column-min-width,
-    --layout-4-column-max-width:  $layout-4-column-max-width,
-    --layout-8-column-min-width:  $layout-8-column-min-width,
-    --layout-8-column-max-width:  $layout-8-column-max-width,
-    --layout-12-column-min-width: $layout-12-column-min-width,
-    --layout-12-column-max-width: $layout-12-column-max-width,
+#{$apply-css-vars-everywhere-selector} {
+    --layout-4-column-min-width:  $layout-4-column-min-width;
+    --layout-4-column-max-width:  $layout-4-column-max-width;
+    --layout-8-column-min-width:  $layout-8-column-min-width;
+    --layout-8-column-max-width:  $layout-8-column-max-width;
+    --layout-12-column-min-width: $layout-12-column-min-width;
+    --layout-12-column-max-width: $layout-12-column-max-width;
 
-    --desktop-xsmall-min-width: $desktop-xsmall-min-width,
-    --desktop-xsmall-max-width: $desktop-xsmall-max-width,
-    --desktop-small-min-width: $desktop-small-min-width,
-    --desktop-small-max-width: $desktop-small-max-width,
-    --desktop-medium-min-width: $desktop-medium-min-width,
-    --desktop-medium-max-width: $desktop-medium-max-width,
-    --desktop-large-min-width: $desktop-large-min-width,
-    --desktop-large-max-width: $desktop-large-max-width,
-    --desktop-xlarge-min-width: $desktop-xlarge-min-width,
-    --desktop-xlarge-max-width: $desktop-xlarge-max-width,
-
-
-    --phone-portrait-small-min-width: $phone-portrait-small-min-width,
-    --phone-portrait-small-max-width: $phone-portrait-small-max-width,
-    --phone-portrait-medium-min-width: $phone-portrait-medium-min-width,
-    --phone-portrait-medium-max-width: $phone-portrait-medium-max-width,
-    --phone-portrait-large-min-width: $phone-portrait-large-min-width,
-    --phone-portrait-large-max-width: $phone-portrait-large-max-width,
-
-    --phone-portrait-min-width: $phone-portrait-min-width,
-    --phone-portrait-max-width: $phone-portrait-max-width,
+    --desktop-xsmall-min-width: $desktop-xsmall-min-width;
+    --desktop-xsmall-max-width: $desktop-xsmall-max-width;
+    --desktop-small-min-width: $desktop-small-min-width;
+    --desktop-small-max-width: $desktop-small-max-width;
+    --desktop-medium-min-width: $desktop-medium-min-width;
+    --desktop-medium-max-width: $desktop-medium-max-width;
+    --desktop-large-min-width: $desktop-large-min-width;
+    --desktop-large-max-width: $desktop-large-max-width;
+    --desktop-xlarge-min-width: $desktop-xlarge-min-width;
+    --desktop-xlarge-max-width: $desktop-xlarge-max-width;
 
 
-    --phone-landscape-small-min-width: $phone-landscape-small-min-width,
-    --phone-landscape-small-max-width: $phone-landscape-small-max-width,
-    --phone-landscape-medium-min-width: $phone-landscape-medium-min-width,
-    --phone-landscape-medium-max-width: $phone-landscape-medium-max-width,
-    --phone-landscape-large-min-width: $phone-landscape-large-min-width,
-    --phone-landscape-large-max-width: $phone-landscape-large-max-width,
+    --phone-portrait-small-min-width: $phone-portrait-small-min-width;
+    --phone-portrait-small-max-width: $phone-portrait-small-max-width;
+    --phone-portrait-medium-min-width: $phone-portrait-medium-min-width;
+    --phone-portrait-medium-max-width: $phone-portrait-medium-max-width;
+    --phone-portrait-large-min-width: $phone-portrait-large-min-width;
+    --phone-portrait-large-max-width: $phone-portrait-large-max-width;
 
-    --phone-landscape-min-width: $phone-landscape-min-width,
-    --phone-landscape-max-width: $phone-landscape-max-width,
-
-
-    --tablet-portrait-small-min-width: $tablet-portrait-small-min-width,
-    --tablet-portrait-small-max-width: $tablet-portrait-small-max-width,
-    --tablet-portrait-medium-min-width: $tablet-portrait-medium-min-width,
-    --tablet-portrait-medium-max-width: $tablet-portrait-medium-max-width,
-    --tablet-portrait-large-min-width: $tablet-portrait-large-min-width,
-    --tablet-portrait-large-max-width: $tablet-portrait-large-max-width,
-
-    --tablet-portrait-min-width: $tablet-portrait-min-width,
-    --tablet-portrait-max-width: $tablet-portrait-max-width,
+    --phone-portrait-min-width: $phone-portrait-min-width;
+    --phone-portrait-max-width: $phone-portrait-max-width;
 
 
-    --tablet-landscape-small-min-width: $tablet-landscape-small-min-width,
-    --tablet-landscape-small-max-width: $tablet-landscape-small-max-width,
-    --tablet-landscape-medium-min-width: $tablet-landscape-medium-min-width,
-    --tablet-landscape-medium-max-width: $tablet-landscape-medium-max-width,
-    --tablet-landscape-large-min-width: $tablet-landscape-large-min-width,
-    --tablet-landscape-large-max-width: $tablet-landscape-large-max-width,
+    --phone-landscape-small-min-width: $phone-landscape-small-min-width;
+    --phone-landscape-small-max-width: $phone-landscape-small-max-width;
+    --phone-landscape-medium-min-width: $phone-landscape-medium-min-width;
+    --phone-landscape-medium-max-width: $phone-landscape-medium-max-width;
+    --phone-landscape-large-min-width: $phone-landscape-large-min-width;
+    --phone-landscape-large-max-width: $phone-landscape-large-max-width;
 
-    --tablet-landscape-min-width: $tablet-landscape-min-width,
-    --tablet-landscape-max-width: $tablet-landscape-max-width,
-
-
-    --min-width-for-both-summary-and-detail-content: $min-width-for-both-summary-and-detail-content,
-    --max-width-for-normal-content: $max-width-for-normal-content,
+    --phone-landscape-min-width: $phone-landscape-min-width;
+    --phone-landscape-max-width: $phone-landscape-max-width;
 
 
-    --size-class-phone-tablet-breakpoint: $size-class-phone-tablet-breakpoint,
-    --size-class-tablet-desktop-breakpoint: $size-class-tablet-desktop-breakpoint,
-));
+    --tablet-portrait-small-min-width: $tablet-portrait-small-min-width;
+    --tablet-portrait-small-max-width: $tablet-portrait-small-max-width;
+    --tablet-portrait-medium-min-width: $tablet-portrait-medium-min-width;
+    --tablet-portrait-medium-max-width: $tablet-portrait-medium-max-width;
+    --tablet-portrait-large-min-width: $tablet-portrait-large-min-width;
+    --tablet-portrait-large-max-width: $tablet-portrait-large-max-width;
+
+    --tablet-portrait-min-width: $tablet-portrait-min-width;
+    --tablet-portrait-max-width: $tablet-portrait-max-width;
+
+
+    --tablet-landscape-small-min-width: $tablet-landscape-small-min-width;
+    --tablet-landscape-small-max-width: $tablet-landscape-small-max-width;
+    --tablet-landscape-medium-min-width: $tablet-landscape-medium-min-width;
+    --tablet-landscape-medium-max-width: $tablet-landscape-medium-max-width;
+    --tablet-landscape-large-min-width: $tablet-landscape-large-min-width;
+    --tablet-landscape-large-max-width: $tablet-landscape-large-max-width;
+
+    --tablet-landscape-min-width: $tablet-landscape-min-width;
+    --tablet-landscape-max-width: $tablet-landscape-max-width;
+
+
+    --min-width-for-both-summary-and-detail-content: $min-width-for-both-summary-and-detail-content;
+    --max-width-for-normal-content: $max-width-for-normal-content;
+
+
+    --size-class-phone-tablet-breakpoint: $size-class-phone-tablet-breakpoint;
+    --size-class-tablet-desktop-breakpoint: $size-class-tablet-desktop-breakpoint;
+}
 
 
 // MARK: - Structure vars
@@ -316,10 +316,10 @@ $app-bar-padding: $app-bar-padding-top $app-bar-padding-right $app-bar-padding-b
 $app-bar-z-index: 4 !default;
 $sidebar-z-index: 16 !default;
 
-@include css-vars((
-    --app-bar-z-index: $app-bar-z-index,
-    --sidebar-z-index: $sidebar-z-index,
-));
+#{$apply-css-vars-everywhere-selector} {
+    --app-bar-z-index: $app-bar-z-index;
+    --sidebar-z-index: $sidebar-z-index;
+}
 
 
 // MARK: Content
@@ -338,40 +338,41 @@ $content-margin-right-tablet-and-desktop: $content-margin-horiz-tablet-and-deskt
 
 
 
-@include css-vars((
-    --app-bar-height-phone-portrait:     $app-bar-height-phone-portrait,
-    --app-bar-height-phone-landscape:    $app-bar-height-phone-landscape,
-    --app-bar-height-tablet-and-desktop: $app-bar-height-tablet-and-desktop,
-    --prominent-app-bar-total-height:    $prominent-app-bar-total-height,
-    --app-bar-prominence-height-phone-portrait:           $app-bar-prominence-height-phone-portrait,
-    --app-bar-prominence-height-phone-landscape:          $app-bar-prominence-height-phone-landscape,
-    --app-bar-prominence-height-phone-tablet-and-desktop: $app-bar-prominence-height-phone-tablet-and-desktop,
+#{$apply-css-vars-everywhere-selector} {
+    --app-bar-height-phone-portrait:     $app-bar-height-phone-portrait;
+    --app-bar-height-phone-landscape:    $app-bar-height-phone-landscape;
+    --app-bar-height-tablet-and-desktop: $app-bar-height-tablet-and-desktop;
+    --prominent-app-bar-total-height:    $prominent-app-bar-total-height;
+    --app-bar-prominence-height-phone-portrait:           $app-bar-prominence-height-phone-portrait;
+    --app-bar-prominence-height-phone-landscape:          $app-bar-prominence-height-phone-landscape;
+    --app-bar-prominence-height-phone-tablet-and-desktop: $app-bar-prominence-height-phone-tablet-and-desktop;
 
-    --app-bar-padding-top:        $app-bar-padding-top,
-    --app-bar-padding-right:      $app-bar-padding-right,
-    --app-bar-padding-bottom:     $app-bar-padding-bottom,
-    --app-bar-padding-left:       $app-bar-padding-left,
-    --app-bar-vertical-padding:   $app-bar-vertical-padding,
-    --app-bar-horizontal-padding: $app-bar-horizontal-padding,
-    --app-bar-padding:            $app-bar-padding,
+    --app-bar-padding-top:        $app-bar-padding-top;
+    --app-bar-padding-right:      $app-bar-padding-right;
+    --app-bar-padding-bottom:     $app-bar-padding-bottom;
+    --app-bar-padding-left:       $app-bar-padding-left;
+    --app-bar-vertical-padding:   $app-bar-vertical-padding;
+    --app-bar-horizontal-padding: $app-bar-horizontal-padding;
+    --app-bar-padding:            $app-bar-padding;
 
-    --app-bar-z-index: $app-bar-z-index,
+    --app-bar-z-index: $app-bar-z-index;
 
 
-    --content-margin-horiz-phone-portrait: $content-margin-horiz-phone-portrait,
-    --content-margin-horiz-phone-landscape: $content-margin-horiz-phone-landscape,
-    --content-margin-horiz-tablet-and-desktop: $content-margin-horiz-tablet-and-desktop,
+    --content-margin-horiz-phone-portrait: $content-margin-horiz-phone-portrait;
+    --content-margin-horiz-phone-landscape: $content-margin-horiz-phone-landscape;
+    --content-margin-horiz-tablet-and-desktop: $content-margin-horiz-tablet-and-desktop;
 
-    --content-margin-left-phone-portrait: $content-margin-left-phone-portrait,
-    --content-margin-left-phone-landscape: $content-margin-left-phone-landscape,
-    --content-margin-left-tablet-and-desktop: $content-margin-left-tablet-and-desktop,
+    --content-margin-left-phone-portrait: $content-margin-left-phone-portrait;
+    --content-margin-left-phone-landscape: $content-margin-left-phone-landscape;
+    --content-margin-left-tablet-and-desktop: $content-margin-left-tablet-and-desktop;
 
-    --content-margin-right-phone-portrait: $content-margin-right-phone-portrait,
-    --content-margin-right-phone-landscape: $content-margin-right-phone-landscape,
-    --content-margin-right-tablet-and-desktop: $content-margin-right-tablet-and-desktop,
-));
+    --content-margin-right-phone-portrait: $content-margin-right-phone-portrait;
+    --content-margin-right-phone-landscape: $content-margin-right-phone-landscape;
+    --content-margin-right-tablet-and-desktop: $content-margin-right-tablet-and-desktop;
+}
 
-:root {
+
+#{$apply-css-vars-everywhere-selector} {
     --app-bar-height-auto: var(--app-bar-height-phone-portrait);
     --content-margin-horiz-auto: var(--content-margin-horiz-phone-portrait);
 
@@ -399,7 +400,7 @@ $sidebar-default-width: 3in;
 $sidebar-max-width: 80vw;
 
 
-@include css-vars((
-    --sidebar-default-width: $sidebar-default-width,
-    --sidebar-max-width: $sidebar-max-width,
-));
+#{$apply-css-vars-everywhere-selector} {
+    --sidebar-default-width: $sidebar-default-width;
+    --sidebar-max-width: $sidebar-max-width;
+}
