--- a/assets/v2/neon/neon-animation-renderer.scss
+++ b/assets/v2/neon/neon-animation-renderer.scss
@@ -9,9 +9,9 @@
 
 // MARK: - Marshall SCSS vars to CSS vars
 
-@include css-vars((
-    --animation-duration-default: $animation-duration-default,
-));
+#{$apply-css-vars-everywhere-selector} {
+    --animation-duration-default: $animation-duration-default;
+}
 
 *,
 *::before,
