--- a/assets/v2/material/material-colors-vars-incl.scss
+++ b/assets/v2/material/material-colors-vars-incl.scss
@@ -1,4 +1,5 @@
 
+@import "neon-shared-vars-incl";
 @import "css-vars";
 $css-vars-use-native: true;
 
@@ -282,7 +283,7 @@ $material-white: #fff;
 
 
 
-:root {
+#{$applies-to-everything-selector} {
     --material-red-50: #{$material-red-50};
     --material-red-100: #{$material-red-100};
     --material-red-200: #{$material-red-200};
