--- a/assets/v2/neon/neon-earth-vars.scss
+++ b/assets/v2/neon/neon-earth-vars.scss
@@ -3,13 +3,13 @@
 //
 // Variables that the Neon Earth subtheme uses
 
-@import "./neon-shared-vars.css";
+@import "neon-shared-vars-incl";
 @import "css-vars";
 $css-vars-use-native: true;
 
 
 
-@include css-vars((
-    --theme-primary-color: var(--theme-earth-primary-color),
-    --theme-accent-color: var(--theme-earth-accent-color),
-));
+#{$applies-to-everything-selector} {
+    --theme-primary-color: var(--theme-earth-primary-color);
+    --theme-accent-color: var(--theme-earth-accent-color);
+}
